--- a/toby-vol1-test-1-JUnit 테스트/pom.xml
+++ b/toby-vol1-test-1-JUnit 테스트/pom.xml
@@ -48,4 +48,18 @@
 			<version>5.0.6.RELEASE</version>
 		</dependency>
 	</dependencies>
+	<build>
+		<finalName>toby_spring</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
