--- a/toby-vol1-test-1-JUnit 테스트/pom.xml
+++ b/toby-vol1-test-1-JUnit 테스트/pom.xml
@@ -47,6 +47,11 @@
 			<artifactId>spring-jdbc</artifactId>
 			<version>5.0.6.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.46</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>toby_spring</finalName>
@@ -58,6 +63,7 @@
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
+					<encoding>utf-8</encoding>
 				</configuration>
 			</plugin>
 		</plugins>
