--- a/toby-vol1-test-3-테스트 코드에 의한 DI/pom.xml
+++ b/toby-vol1-test-3-테스트 코드에 의한 DI/pom.xml
@@ -52,5 +52,25 @@
 			<artifactId>spring-test</artifactId>
 			<version>5.0.6.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.46</version>
+		</dependency>
 	</dependencies>
+	<build>
+		<finalName>toby_spring</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+					<encoding>utf-8</encoding>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
